--- a/src/index.css
+++ b/src/index.css
@@ -91,6 +91,12 @@ body {
   background-color: var(--color-white);
 }
 
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 main {
   display: flex;
   flex-grow: 1;
@@ -161,7 +167,7 @@ select {
   font-size: var(--font-size-300);
   background-color: var(--color-white);
   background-color: var(--color-white);
-  background-image: url('../images/arrow-down.svg');
+  background-image: url("../images/arrow-down.svg");
   background-repeat: no-repeat;
   background-position: right 15px top 50%;
   background-size: 15px;
@@ -230,7 +236,7 @@ select {
   margin: 0 0 5px;
   font-weight: 600;
   font-size: var(--font-size-400);
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
 }
 
 .trip-info__content {
@@ -241,14 +247,14 @@ select {
 .trip-info__duration {
   min-width: 120px;
   padding-left: 25px;
-  background-image: url('../images/calendar.svg');
+  background-image: url("../images/calendar.svg");
   background-repeat: no-repeat;
   background-position: 0 50%;
   background-size: 15px;
 }
 
 .trip-info__level::before {
-  content: '•';
+  content: "•";
   margin-right: 10px;
   color: var(--color-blue-200);
 }
@@ -285,7 +291,7 @@ select {
   color: var(--color-blue-400);
   font-weight: 600;
   font-size: var(--font-size-500);
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
   text-decoration: none;
 }
 
@@ -452,7 +458,7 @@ select {
 .trips-filter__search input {
   padding-left: 50px;
   background-color: var(--color-white);
-  background-image: url('../images/search.svg');
+  background-image: url("../images/search.svg");
   background-repeat: no-repeat;
   background-position: 15px 50%;
   background-size: 22px;
@@ -612,7 +618,7 @@ select {
   margin: 0;
   font-weight: 600;
   font-size: var(--font-size-400);
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
   line-height: 1;
 }
 
